--- a/index.html
+++ b/index.html
@@ -676,13 +676,13 @@
             <h2 class="section-title">🏅 Certifications — My Training Regimen</h2>
             <div class="certifications">
                 <div class="cert-item">
-                    <div class="interest-title">AWS Certified Developer – Associate</div>
-                </div>
-                <div class="cert-item">
                     <div class="interest-title">Foundations of Project Management – Google</div>
                 </div>
                 <div class="cert-item">
-                    <div class="interest-title">AI For Everyone – Andrew Ng</div>
+                    <div class="interest-title"> Business Development</div>
+                </div>
+                <div class="cert-item">
+                    <div class="interest-title">Marketing Strategy</div>
                 </div>
             </div>
         </section>
@@ -710,7 +710,7 @@
                 <div class="interest-card">
                     <span class="interest-icon">🎬</span>
                     <div class="interest-title">Movies</div>
-                    <p>Hollywood buff and Nolan nerd; see storytelling as a mirror to leadership</p>
+                    <p>Hollywood buff with an interest in different genres; see storytelling as a mirror to leadership</p>
                 </div>
             </div>
         </section>
@@ -721,7 +721,7 @@
             <h2 class="section-title">🧭 Looking Ahead</h2>
             <div class="man-utd-badge-bg"></div>
             <p class="future-text">
-                I'm now shifting gears towards an MBA journey — with an eye on Strategy and Information. Like a great movie or a test match comeback, I believe success is about timing, collaboration, and vision.
+                I'm now shifting gears towards an MBA journey — with an eye on Strategy, Technology and Marketing. Like a great movie or a test match comeback, I believe success is about timing, collaboration, and vision.
             </p>
         </section>
     </div>
